--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -7,13 +7,21 @@
       <%= f.hidden_field :image_url %>
       
       <div class="form-group" style="margin-top: 10px; padding: 10px; background: #eee;">    
-        ホワイトボードの配置：
+        ホワイトボードの配置（縦置き）：
         <label id="wb_left-top"><%= f.radio_button :position_wb, "0" %>左上</label>&nbsp;&nbsp;&nbsp;&nbsp;
         <label id="wb_top"><%= f.radio_button :position_wb, "1" %>上</label>&nbsp;&nbsp;&nbsp;&nbsp;
         <label id="wb_right-top"><%= f.radio_button :position_wb, "2" %>右上</label>&nbsp;&nbsp;&nbsp;&nbsp;
         <label id="wb_right-under"><%= f.radio_button :position_wb, "3" %>右下</label>&nbsp;&nbsp;&nbsp;&nbsp;
         <label id="wb_under"><%= f.radio_button :position_wb, "4" %>下</label>&nbsp;&nbsp;&nbsp;&nbsp;
         <label id="wb_left-under"><%= f.radio_button :position_wb, "5" %>左下</label>&nbsp;&nbsp;&nbsp;&nbsp;
+        <br/>
+        ホワイトボードの配置（横置き）：
+        <label id="yoko_wb_left-top"><%= f.radio_button :position_wb, "6" %>左上</label>&nbsp;&nbsp;&nbsp;&nbsp;
+        <label id="yoko_wb_top"><%= f.radio_button :position_wb, "7" %>上</label>&nbsp;&nbsp;&nbsp;&nbsp;
+        <label id="yoko_wb_right-top"><%= f.radio_button :position_wb, "8" %>右上</label>&nbsp;&nbsp;&nbsp;&nbsp;
+        <label id="yoko_wb_right-under"><%= f.radio_button :position_wb, "9" %>右下</label>&nbsp;&nbsp;&nbsp;&nbsp;
+        <label id="yoko_wb_under"><%= f.radio_button :position_wb, "10" %>下</label>&nbsp;&nbsp;&nbsp;&nbsp;
+        <label id="yoko_wb_left-under"><%= f.radio_button :position_wb, "11" %>左下</label>&nbsp;&nbsp;&nbsp;&nbsp;          
       </div>
       
       <table class="preview-area">
@@ -69,7 +77,8 @@
   var img = new Image();
   var reader = new FileReader();
   var tapCount = 0;
-  var wb_width = 160, wb_height = 200;  
+  var wb_width = 160, wb_height = 200;
+  var yoko_wb_width = 170, yoko_wb_height = 100;  
 
   // ホワイトボードの描画
   function drawWB(x, y, width, height) {
@@ -116,6 +125,7 @@
     reader.readAsDataURL(e.target.files[0]);
   });
 
+  // 縦置き
   $('#wb_left-top').on('click', function (e) {
     drawWB(0, 0, wb_width, wb_height);
   });
@@ -134,14 +144,23 @@
   $('#wb_left-under').on('click', function (e) {
     drawWB(0, canvas.height - wb_height, wb_width, wb_height);
   });
-
-/*
-  $('#submit').on('mousedown', function (e) {
-    // 画像化
-    var canvas_data = canvas.toDataURL('image/jpg');
-    
-    $("#post_image1").val(""); //画像データを二重に送信するのを防ぐ
-    $("#post_image_url").val(canvas_data);
+  // 横置き
+  $('#yoko_wb_left-top').on('click', function (e) {
+    drawWB(0, 0, yoko_wb_width, yoko_wb_height);
   });
-  */
+  $('#yoko_wb_top').on('click', function (e) {
+    drawWB(canvas.width/2 - yoko_wb_width/2, 0, yoko_wb_width, yoko_wb_height);
+  });
+  $('#yoko_wb_right-top').on('click', function (e) {
+    drawWB(canvas.width - yoko_wb_width, 0, yoko_wb_width, yoko_wb_height);
+  });
+  $('#yoko_wb_right-under').on('click', function (e) {
+    drawWB(canvas.width - yoko_wb_width, canvas.height - yoko_wb_height, yoko_wb_width, yoko_wb_height);
+  });
+  $('#yoko_wb_under').on('click', function (e) {
+    drawWB(canvas.width/2 - yoko_wb_width/2, canvas.height - yoko_wb_height, yoko_wb_width, yoko_wb_height);
+  });
+  $('#yoko_wb_left-under').on('click', function (e) {
+    drawWB(0, canvas.height - yoko_wb_height, yoko_wb_width, yoko_wb_height);
+  });  
 </script>
