--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -38,9 +38,28 @@
   <% elsif @post.position_wb == 4 %>
     <!-- 下 -->
     <div class="wb_down"><%= render 'posts/wb', { house: @house, point: @point, post: @post } %></div>
-  <% else %>
+  <% elsif @post.position_wb == 5 %>
     <!-- 左下 -->
     <div class="wb_left_down"><%= render 'posts/wb', { house: @house, point: @point, post: @post } %></div>
+  
+  <% elsif @post.position_wb == 6 %>
+    <!-- 左上（横置き） -->
+    <div class="wb_yoko_left_top"><%= render 'posts/wb', { house: @house, point: @point, post: @post } %></div>  
+  <% elsif @post.position_wb == 7 %>
+    <!-- 上（横置き） -->
+    <div class="wb_yoko_top"><%= render 'posts/wb', { house: @house, point: @point, post: @post } %></div>    
+  <% elsif @post.position_wb == 8 %>
+    <!-- 右上（横置き） -->
+    <div class="wb_yoko_right_top"><%= render 'posts/wb', { house: @house, point: @point, post: @post } %></div>    
+  <% elsif @post.position_wb == 9 %>
+    <!-- 右下（横置き） -->
+    <div class="wb_yoko_right_down"><%= render 'posts/wb', { house: @house, point: @point, post: @post } %></div>    
+  <% elsif @post.position_wb == 10 %>
+    <!-- 下（横置き） -->
+    <div class="wb_yoko_down"><%= render 'posts/wb', { house: @house, point: @point, post: @post } %></div>
+  <% else %>
+    <!-- 左下（横置き） -->
+    <div class="wb_yoko_left_down"><%= render 'posts/wb', { house: @house, point: @point, post: @post } %></div>
   <% end %>
 </div>
 
@@ -83,5 +102,49 @@
   position: absolute;
   bottom: 0;
   left: 0;
+}
+
+
+.post-img > .wb_yoko_left_top {
+  position: absolute;
+  top: 170px;
+  left: 0;
+  transform:rotate(-90deg);
+  transform-origin:left top;
+}
+.post-img > .wb_yoko_top {
+  position: absolute;
+  top: 170px;
+  left: calc(50% - 66px);
+  transform:rotate(-90deg);
+  transform-origin:left top;
+}
+.post-img > .wb_yoko_right_top {
+  position: absolute;
+  top: 170px;
+  right: -34px;
+  transform:rotate(-90deg);
+  transform-origin:left top;
+}
+.post-img > .wb_yoko_right_down {
+  position: absolute;
+  bottom: -136px;
+  right: -34px;
+  transform:rotate(-90deg);
+  transform-origin:left top;
+}
+.post-img > .wb_yoko_down {
+  position: absolute;
+  bottom: -136px;
+  left: calc(50% - 66px);
+  transform:rotate(-90deg);
+  transform-origin:left top;
+}
+.post-img > .wb_yoko_left_down {
+  position: absolute;
+  bottom: -136px;
+  left: 0;
+  transform:rotate(-90deg);
+  transform-origin:left top;
 }
 </style>
