--- a/app/views/damages/_form.html.erb
+++ b/app/views/damages/_form.html.erb
@@ -7,13 +7,21 @@
       <%= f.hidden_field :image_url %>
 
       <div class="form-group" style="margin-top: 10px; padding: 10px; background: #eee;">    
-        ホワイトボードの配置：
+        ホワイトボードの配置（縦置き）：
         <label id="wb_left-top"><%= f.radio_button :position_wb, "0" %>左上</label>&nbsp;&nbsp;&nbsp;&nbsp;
         <label id="wb_top"><%= f.radio_button :position_wb, "1" %>上</label>&nbsp;&nbsp;&nbsp;&nbsp;
         <label id="wb_right-top"><%= f.radio_button :position_wb, "2" %>右上</label>&nbsp;&nbsp;&nbsp;&nbsp;
         <label id="wb_right-under"><%= f.radio_button :position_wb, "3" %>右下</label>&nbsp;&nbsp;&nbsp;&nbsp;
         <label id="wb_under"><%= f.radio_button :position_wb, "4" %>下</label>&nbsp;&nbsp;&nbsp;&nbsp;
         <label id="wb_left-under"><%= f.radio_button :position_wb, "5" %>左下</label>&nbsp;&nbsp;&nbsp;&nbsp;
+        <br/>
+        ホワイトボードの配置（横置き）：
+        <label id="yoko_wb_left-top"><%= f.radio_button :position_wb, "6" %>左上</label>&nbsp;&nbsp;&nbsp;&nbsp;
+        <label id="yoko_wb_top"><%= f.radio_button :position_wb, "7" %>上</label>&nbsp;&nbsp;&nbsp;&nbsp;
+        <label id="yoko_wb_right-top"><%= f.radio_button :position_wb, "8" %>右上</label>&nbsp;&nbsp;&nbsp;&nbsp;
+        <label id="yoko_wb_right-under"><%= f.radio_button :position_wb, "9" %>右下</label>&nbsp;&nbsp;&nbsp;&nbsp;
+        <label id="yoko_wb_under"><%= f.radio_button :position_wb, "10" %>下</label>&nbsp;&nbsp;&nbsp;&nbsp;
+        <label id="yoko_wb_left-under"><%= f.radio_button :position_wb, "11" %>左下</label>&nbsp;&nbsp;&nbsp;&nbsp;        
       </div>
 
       <table class="preview-area">
@@ -95,6 +103,7 @@
   var reader = new FileReader();
   var tapCount = 0;
   var wb_width = 120, wb_height = 150;
+  var yoko_wb_width = 170, yoko_wb_height = 100;
 
   // ホワイトボードの描画
   function drawWB(x, y, width, height) {
@@ -132,6 +141,9 @@
         
         // 画像を描画
         ctx.drawImage(img, 0, 0, canvasWidth, this.height * (canvasWidth / this.width));
+        // 画像だけの状態を保存
+        //original_ctx.drawImage(img, 0, 0, canvasWidth, this.height * (canvasWidth / this.width));
+        
         // ホワイトボード描画
         drawWB(0, 0, wb_width, wb_height);
       }
@@ -139,6 +151,7 @@
     reader.readAsDataURL(e.target.files[0]);
   });
   
+  // 縦置き  
   $('#wb_left-top').on('click', function (e) {
     drawWB(0, 0, wb_width, wb_height);
   });
@@ -157,18 +170,39 @@
   $('#wb_left-under').on('click', function (e) {
     drawWB(0, canvas2.height - wb_height, wb_width, wb_height);
   });
+  // 横置き
+  $('#yoko_wb_left-top').on('click', function (e) {
+    drawWB(0, 0, yoko_wb_width, yoko_wb_height);
+  });
+  $('#yoko_wb_top').on('click', function (e) {
+    drawWB(canvas2.width/2 - yoko_wb_width/2, 0, yoko_wb_width, yoko_wb_height);
+  });
+  $('#yoko_wb_right-top').on('click', function (e) {
+    drawWB(canvas2.width - yoko_wb_width, 0, yoko_wb_width, yoko_wb_height);
+  });
+  $('#yoko_wb_right-under').on('click', function (e) {
+    drawWB(canvas2.width - yoko_wb_width, canvas2.height - yoko_wb_height, yoko_wb_width, yoko_wb_height);
+  });
+  $('#yoko_wb_under').on('click', function (e) {
+    drawWB(canvas2.width/2 - yoko_wb_width/2, canvas2.height - yoko_wb_height, yoko_wb_width, yoko_wb_height);
+  });
+  $('#yoko_wb_left-under').on('click', function (e) {
+    drawWB(0, canvas2.height - yoko_wb_height, yoko_wb_width, yoko_wb_height);
+  });  
   
   $('#liveview2').on('click', function(e){
     if(document.getElementById( "arrow_clean" ).checked) {
       // 初期化
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      //ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
     } else {
       // 実際の画像サイズと描画領域の倍率を算出
       var rate = canvas.width / canvas.clientWidth;
       let offsetX = e.offsetX * rate; // =>要素左上からのx座標
       let offsetY = e.offsetY * rate; // =>要素左上からのy座標
   
-      var w=40,h=40,w0=w*0.5,h0=h*0.25,x=offsetX,y=offsetY;
+//      var w=30,h=30,w0=w*0.5,h0=h*0.25,x=offsetX,y=offsetY;
+      var w=canvas.width*0.05,h=w,w0=w*0.5,h0=h*0.25,x=offsetX,y=offsetY;
       // 矢印描画     
       ctx.setTransform(1,0,0,1,0,0);
       ctx.translate(x,y);
@@ -176,44 +210,44 @@
       ctx.fillStyle = 'red';
       if ( document.getElementById( "arrow_up" ).checked ) {
       	// 上
-        ctx.moveTo(-h0,w0);    	
-      	ctx.lineTo(-h0,0);
-        ctx.lineTo(-w0,0);
-        ctx.lineTo(0,-w0);
-        ctx.lineTo(w0,0);
-        ctx.lineTo(h0,0);
+        ctx.moveTo(-h0,w);
+      	ctx.lineTo(-h0,w0);
+        ctx.lineTo(-w0,w0);
+        ctx.lineTo(0,0);
+        ctx.lineTo(w0,w0);
         ctx.lineTo(h0,w0);
-        ctx.lineTo(-h0,w0);
+        ctx.lineTo(h0,w); 
+        ctx.lineTo(-h0,w);
       } else if ( document.getElementById( "arrow_right" ).checked ) {
       	// 右
-        ctx.moveTo(-w0,-h0);    	
-      	ctx.lineTo(0,-h0);
-        ctx.lineTo(0,-w0);
-        ctx.lineTo(w0,0);
-        ctx.lineTo(0,w0);
-        ctx.lineTo(0,h0);
+        ctx.moveTo(-w,-h0);    	
+      	ctx.lineTo(-w0,-h0);
+        ctx.lineTo(-w0,-w0);
+        ctx.lineTo(0,0);
+        ctx.lineTo(-w0,w0);
         ctx.lineTo(-w0,h0);
-        ctx.lineTo(-w0,-h0);
+        ctx.lineTo(-w,h0);
+        ctx.lineTo(-w,-h0);
       } else if ( document.getElementById( "arrow_down" ).checked ) {
       	// 下
-        ctx.moveTo(-h0,-w0);    	
-      	ctx.lineTo(-h0,0);
-        ctx.lineTo(-w0,0);
-        ctx.lineTo(0,w0);
-        ctx.lineTo(w0,0);
-        ctx.lineTo(h0,0);
+        ctx.moveTo(-h0,-w);    	
+      	ctx.lineTo(-h0,-w0);
+        ctx.lineTo(-w0,-w0);
+        ctx.lineTo(0,0);
+        ctx.lineTo(w0,-w0);
         ctx.lineTo(h0,-w0);
-        ctx.lineTo(-h0,-w0);    	
+        ctx.lineTo(h0,-w);
+        ctx.lineTo(-h0,-w);    	
       } else if ( document.getElementById( "arrow_left" ).checked ) {
       	// 左
-        ctx.moveTo(w0,-h0);
-      	ctx.lineTo(0,-h0);
-        ctx.lineTo(0,-w0);
-        ctx.lineTo(-w0,0);
-        ctx.lineTo(0,w0);
-        ctx.lineTo(0,h0);
+        ctx.moveTo(w,-h0);
+      	ctx.lineTo(w0,-h0);
+        ctx.lineTo(w0,-w0);
+        ctx.lineTo(0,0);
+        ctx.lineTo(w0,w0);
         ctx.lineTo(w0,h0);
-        ctx.lineTo(w0,-h0);
+        ctx.lineTo(w,h0);
+        ctx.lineTo(w,-h0);
       }
       ctx.stroke();
       ctx.fill();
