--- a/app/views/houses/syodakusyo_new_pre_survey.html.erb
+++ b/app/views/houses/syodakusyo_new_pre_survey.html.erb
@@ -163,6 +163,7 @@ var canvas = document.getElementById('myCanvas');
   canvas.addEventListener('touchend', touchEnd, false);
   // タッチスタート
   function touchStart(e) {
+    no_scroll();  // スクロール禁止
     var rect = e.target.getBoundingClientRect();
     var X = ~~(e.touches[0].clientX - rect.left);
     var Y = ~~(e.touches[0].clientY - rect.top);
@@ -171,6 +172,7 @@ var canvas = document.getElementById('myCanvas');
   };
   // タッチ中
   function touchMove(e) {
+    no_scroll();  // スクロール禁止
     var rect = e.target.getBoundingClientRect();
     var X = ~~(e.touches[0].clientX - rect.left);
     var Y = ~~(e.touches[0].clientY - rect.top);
@@ -179,9 +181,29 @@ var canvas = document.getElementById('myCanvas');
   };
   // タッチエンド
   function touchEnd(e) {
+    return_scroll();  // スクロール禁止解除
     mouseX = "";
     mouseY = "";
   };
+  ///////////////////
+  // スクロール禁止
+  function no_scroll() {
+      // PCでのスクロール禁止
+      //document.addEventListener("mousewheel", scroll_control, { passive: false });
+      // スマホでのタッチ操作でのスクロール禁止
+      document.addEventListener("touchmove", scroll_control, { passive: false });
+  }
+  // スクロール禁止解除
+  function return_scroll() {
+      // PCでのスクロール禁止解除
+      //document.removeEventListener("mousewheel", scroll_control, { passive: false });
+      // スマホでのタッチ操作でのスクロール禁止解除
+      document.removeEventListener('touchmove', scroll_control, { passive: false });
+  }
+  // スクロール関連メソッド
+  function scroll_control(event) {
+      event.preventDefault();
+  } 
   
   ////////////////////////
   //メニューのアイコン関係
