--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -153,3 +153,8 @@ ul {
 .disabled label {
   pointer-events: none;
 }
+/*-- 枠線を強調 --*/
+.table-bordered td
+{
+  border:1px solid #333 !important;  
+}
